--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -13,8 +13,8 @@
 <link href="css/landing/startup.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
-  <script src="js/forum/landing/html5shiv.js"></script>
-  <script src="js/forum/landing/respond.min.js"></script>
+  <script src="js/landing/html5shiv.js"></script>
+  <script src="js/landing/respond.min.js"></script>
 <![endif]-->
 
 <script src="js/thrift.js" type="text/javascript"></script>
@@ -42,7 +42,7 @@
 </script>
 
 <link rel="shortcut icon" href="i/landing/vmesteonline.png">
-<script src="js/forum/landing/pace.js"></script>
+<script src="js/landing/pace.js"></script>
 
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -254,12 +254,12 @@
 	</div>
 
 
-	<script src="js/forum/landing/jquery.js"></script>
-	<script src="js/forum/landing/bootstrap.js"></script>
-	<script src="js/forum/landing/easing.js"></script>
-	<script src="js/forum/landing/typer.js"></script>
-	<script src="js/forum/landing/nicescroll.js"></script>
-	<script src="js/forum/landing/ketchup.all.js"></script>
+	<script src="js/landing/jquery.js"></script>
+	<script src="js/landing/bootstrap.js"></script>
+	<script src="js/landing/easing.js"></script>
+	<script src="js/landing/typer.js"></script>
+	<script src="js/landing/nicescroll.js"></script>
+	<script src="js/landing/ketchup.all.js"></script>
 
 	<!-- файлы thrift -->
 	<script src="js/thrift.js" type="text/javascript"></script>
