--- a/vonline_be/war/request.html
+++ b/vonline_be/war/request.html
@@ -12,12 +12,12 @@
 <link href="css/landing/startup.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
-  <script src="js/forum/landing/html5shiv.js"></script>
-  <script src="js/forum/landing/respond.min.js"></script>
+  <script src="js/landing/html5shiv.js"></script>
+  <script src="js/landing/respond.min.js"></script>
 <![endif]-->
 
     <link rel="shortcut icon" href="i/landing/vmesteonline.png">
-<script src="js/forum/landing/pace.js"></script>
+<script src="js/landing/pace.js"></script>
 
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -76,13 +76,13 @@
         </div>
     </div>
 
-	<script src="js/forum/landing/jquery.js"></script>
+	<script src="js/landing/jquery.js"></script>
 
-	<script src="js/forum/landing/bootstrap.js"></script>
-	<script src="js/forum/landing/easing.js"></script>
-	<script src="js/forum/landing/typer.js"></script>
-	<script src="js/forum/landing/nicescroll.js"></script>
-	<script src="js/forum/landing/ketchup.all.js"></script>
+	<script src="js/landing/bootstrap.js"></script>
+	<script src="js/landing/easing.js"></script>
+	<script src="js/landing/typer.js"></script>
+	<script src="js/landing/nicescroll.js"></script>
+	<script src="js/landing/ketchup.all.js"></script>
 
 
     <!-- файлы thrift -->
