информация о всех магазинах

--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -45,7 +45,7 @@
                                 <div class="radio">
                                     <label>
                                         <input name="form-field-radio" type="radio" checked="checked" class="ace">
-                                        <span class="lbl"> Самовывоз</span>
+                                        <span class="lbl"> Самовывоз*</span>
                                     </label>
                                 </div>
                                 <div class="radio">
@@ -70,6 +70,8 @@
 
 
                                     <span class="lbl"> Адрес доставки: <span class="delivery-address"></span></span>
+                                    <span class="lbl">*<i><font size="2px">&nbsp;При самовывозе из других наших магазинов, напишите `Ленсовета` или `Парголовская` в комментарии ниже. <br/>Самовывоз из этих магазинов после 15.00 в день привоза и весь следующий день.</font>	</i></span>
+                                    
                                     <div class="address-input">
                                         <input class="country-delivery" type="text" value="Россия" placeholder="Страна"/>
                                         <input class="city-delivery" type="text" value="Санкт-Петербург" placeholder="Город"/>
