static.vomoloko.ru

--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -70,7 +70,7 @@
 
 
                                     <span class="lbl"> Адрес доставки: <span class="delivery-address"></span></span>
-                                    <span class="lbl">*<i><font size="2px">&nbsp;При самовывозе из других наших магазинов, напишите `Ленсовета` или `Парголовская` в комментарии ниже.
+                                    <span class="lbl">*<i><font size="2px">&nbsp;При самовывозе из других наших магазинов, напишите `Ленсовета`, `Парголовская`, 'Пролетарская', 'Ижорского Батальона' в комментарии ниже.
                                     	<br/><b>Для этих магазинов минимальная сумма заказа для самовывоза 500 рублей</b> 
                                     	<br/>Самовывоз из этих магазинов после 15.00 в день привоза и весь следующий день.</font>	</i></span>
                                     
